--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "firebase": "^11.7.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
