--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.7.0",
     "multer": "^1.4.5-lts.2",
     "pg": "^8.11.3"
   },
