--- a/.github/workflows/Deploy_Frontend.yml
+++ b/.github/workflows/Deploy_Frontend.yml
@@ -1,4 +1,4 @@
-name: Deploy Monorepo to Vercel
+name: Deploy to Vercel
 
 on:
   push:
@@ -33,4 +33,33 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }} # Necesitas un secret para el ORG del frontend
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID_FRONTEND }} # Necesitas un secret para el PROJECT del frontend
           # root-directory: ./frontend # Esto lo configuras en Vercel directamente al importar el proyecto
+          prod: ${{ github.ref == 'refs/heads/main' }}
+
+  deploy-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout project code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install Backend dependencies
+        run: npm install # O yarn install
+        working-directory: ./backend # Instalar dependencias solo para el backend
+
+      # No hay "build" para el backend a menos que uses TypeScript y necesites compilar
+      # - name: Build Backend
+      #   run: npm run build
+      #   working-directory: ./backend
+
+      - name: Deploy Backend to Vercel
+        uses: amondnet/vercel-action@v25
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }} # Necesitas un secret para el ORG del backend
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID_BACKEND }} # Necesitas un secret para el PROJECT del backend
+          # root-directory: ./backend # Esto lo configuras en Vercel directamente al importar el proyecto
           prod: ${{ github.ref == 'refs/heads/main' }}
