--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.7.0",
     "multer": "^1.4.5-lts.2",
-    "pg": "^8.11.3"
+    "node-fetch": "^3.3.2",
+    "pg": "^8.11.3",
+    "react-qr-code": "^2.0.16"
   },
   "devDependencies": {
     "eslint-plugin-jest": "^28.11.0",
