--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-qr-code": "^2.0.16",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
     "zustand": "^5.0.4"
