--- a/.github/workflows/Deploy_Render.yml
+++ b/.github/workflows/Deploy_Render.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js (o tu runtime de backend, e.g., Python, Java)
+      - name: Set up Node.js 
         uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build backend (si es necesario)
         working-directory: ./backend # Ruta a tu carpeta de backend
-        run: npm run build
+        run: node index.js
 
       - name: Trigger Backend Deploy on Render
         uses: JorgeLNJunior/render-deploy@v1.4.5 # Usa la acción de Render
